--- a/package.json
+++ b/package.json
@@ -3,27 +3,21 @@
   "version": "0.0.1",
   "description": "Bedrock UI Calendar",
   "files": [
-    "css",
-    "lib",
-    "sass"
+    "lib"
   ],
   "module": "lib/esm/index.js",
   "main": "lib/cjs/index.js",
   "types": "lib/cjs/index.d.ts",
   "sideEffects": false,
   "scripts": {
-    "build": "pnpm rm:build && pnpm build:css && pnpm build:sass && pnpm build:cjs && pnpm build:esm",
-    "build:css": "sass ./src/css/bedrock-ui.scss css/bedrock-ui.css --style compressed --no-source-map",
+    "build": "pnpm rm:build && pnpm build:cjs && pnpm build:esm",
     "build:cjs": "tsc --project tsconfig.build-cjs.json && tsc-alias -p tsconfig.build-cjs.json",
     "build:esm": "tsc --project tsconfig.build-esm.json && tsc-alias -p tsconfig.build-esm.json",
-    "build:sass": "node ./scripts/copy-sass.mjs",
     "build-storybook": "build-storybook",
-    "css-size": "node ./scripts/css-size.mjs",
-    "dev": "concurrently \"npm run sass:watch\" \"npm run storybook\"",
-    "rm:build": "rimraf css lib sass",
+    "dev": "concurrently \"npm run storybook\"",
+    "rm:build": "rimraf lib",
     "storybook": "start-storybook -p 6006",
-    "typecheck": "tsc --noEmit",
-    "sass:watch": "sass --watch ./src/css/bedrock-ui.scss css/bedrock-ui.css --style compressed"
+    "typecheck": "tsc --noEmit"
   },
   "author": "Matthew Wolfe",
   "license": "MIT",
@@ -47,7 +41,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.55.0",
     "tsc-alias": "^1.7.0",
     "typescript": "^4.8.4"
   },
