--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "build:cjs": "tsc --project tsconfig.build-cjs.json && tsc-alias -p tsconfig.build-cjs.json",
     "build:esm": "tsc --project tsconfig.build-esm.json && tsc-alias -p tsconfig.build-esm.json",
     "build-storybook": "build-storybook",
-    "dev": "concurrently \"npm run storybook\"",
+    "dev": "start-storybook -p 6006",
     "rm:build": "rimraf lib",
-    "storybook": "start-storybook -p 6006",
     "typecheck": "tsc --noEmit"
   },
   "author": "Matthew Wolfe",
@@ -34,7 +33,6 @@
     "@types/react": "^18.0.24",
     "babel-loader": "^9.0.1",
     "bytes": "^3.1.2",
-    "concurrently": "^7.5.0",
     "fs-extra": "^10.1.0",
     "gzip-size": "^7.0.0",
     "prettier": "^2.7.1",
