--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react": "^18.0.24",
     "babel-loader": "^9.0.1",
     "bytes": "^3.1.2",
+    "dayjs": "^1.11.6",
     "fs-extra": "^10.1.0",
     "gzip-size": "^7.0.0",
     "prettier": "^2.7.1",
@@ -43,6 +44,7 @@
     "typescript": "^4.8.4"
   },
   "peerDependencies": {
+    "dayjs": "^1",
     "react": "^17 || ^18"
   },
   "dependencies": {
