--- a/package.json
+++ b/package.json
@@ -21,31 +21,31 @@
   "author": "Matthew Wolfe",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/builder-webpack4": "^6.5.15",
-    "@storybook/client-api": "^6.5.15",
-    "@storybook/manager-webpack4": "^6.5.15",
-    "@storybook/react": "^6.5.15",
-    "@types/react": "^18.0.26",
+    "@babel/core": "^7.21.3",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack4": "^6.5.16",
+    "@storybook/client-api": "^6.5.16",
+    "@storybook/manager-webpack4": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@types/react": "^18.0.28",
     "babel-loader": "^9.1.2",
     "bytes": "^3.1.2",
     "dayjs": "^1.11.7",
     "fs-extra": "^11.1.0",
     "gzip-size": "^7.0.0",
-    "prettier": "^2.8.2",
+    "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "rimraf": "^3.0.2",
-    "tsc-alias": "^1.8.2",
-    "typescript": "^4.9.4"
+    "rimraf": "^4.4.0",
+    "tsc-alias": "^1.8.3",
+    "typescript": "^5.0.2"
   },
   "peerDependencies": {
     "dayjs": "^1",
-    "react": "^17 || ^18"
+    "react": "^18"
   },
   "dependencies": {
     "clsx": "^1.2.1"
